{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 176,
  "lineage": "bcb03c69-9322-cb33-a545-422452848e7f",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:internet-gateway/igw-09bdf45e86d0d182e",
            "id": "igw-09bdf45e86d0d182e",
            "owner_id": "989211373225",
            "tags": {
              "Name": "social-media-pipeline-dev-igw"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-igw"
            },
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:route-table/rtb-00b44776f601f3d1a",
            "id": "rtb-00b44776f601f3d1a",
            "owner_id": "989211373225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bdf45e86d0d182e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "social-media-pipeline-dev-rt"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d096650d4ddc4f0",
            "route_table_id": "rtb-00b44776f601f3d1a",
            "subnet_id": "subnet-00b4314b43b58ea16"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b18da32a412e47d",
            "route_table_id": "rtb-00b44776f601f3d1a",
            "subnet_id": "subnet-0e25c287728eb13ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:security-group/sg-01b2a7e4eeab65f3b",
            "description": "EC2 instance running Superset and PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b2a7e4eeab65f3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Superset web UI",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "social-media-pipeline-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "989211373225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "social-media-pipeline-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:security-group/sg-0887893cc66ef4f48",
            "description": "VPC Lambda functions - egress to Postgres and S3 endpoint only",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Lambda to PostgreSQL on EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b2a7e4eeab65f3b"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Lambda to S3 via Gateway Endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-63a5400a"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0887893cc66ef4f48",
            "ingress": [],
            "name": "social-media-pipeline-dev-lambda-vpc-sg",
            "name_prefix": "",
            "owner_id": "989211373225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "social-media-pipeline-dev-lambda-vpc-sg"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-lambda-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL accepts connections from Lambda SG only",
            "from_port": 5432,
            "id": "sgrule-4020491673",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b2a7e4eeab65f3b",
            "security_group_rule_id": "sgr-0bf56c85445279d18",
            "self": false,
            "source_security_group_id": "sg-0887893cc66ef4f48",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.ec2",
            "module.networking.aws_security_group.lambda_vpc",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Lambda to PostgreSQL on EC2",
            "from_port": 5432,
            "id": "sgrule-2675668318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0887893cc66ef4f48",
            "security_group_rule_id": "sgr-04b0c0d47b6a2d1e0",
            "self": false,
            "source_security_group_id": "sg-01b2a7e4eeab65f3b",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.ec2",
            "module.networking.aws_security_group.lambda_vpc",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Lambda to S3 via Gateway Endpoint",
            "from_port": 443,
            "id": "sgrule-3339894933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-63a5400a"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0887893cc66ef4f48",
            "security_group_rule_id": "sgr-0bbdca297aeb4b7ae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_security_group.lambda_vpc",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:subnet/subnet-00b4314b43b58ea16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b4314b43b58ea16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "989211373225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "social-media-pipeline-dev-subnet-1"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-subnet-1"
            },
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:subnet/subnet-0e25c287728eb13ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e25c287728eb13ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "989211373225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "social-media-pipeline-dev-subnet-2"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-subnet-2"
            },
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:vpc/vpc-065aaaed5c78d7ca7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06def87b85970b9e8",
            "default_route_table_id": "rtb-0f159084625677e41",
            "default_security_group_id": "sg-03f21e240bf088949",
            "dhcp_options_id": "dopt-00cf379f7379e0c20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065aaaed5c78d7ca7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f159084625677e41",
            "owner_id": "989211373225",
            "tags": {
              "Name": "social-media-pipeline-dev-vpc"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989211373225:vpc-endpoint/vpce-0c8741477fdf31523",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c8741477fdf31523",
            "ip_address_type": "ipv4",
            "owner_id": "989211373225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00b44776f601f3d1a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "social-media-pipeline-dev-s3-endpoint"
            },
            "tags_all": {
              "Name": "social-media-pipeline-dev-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-065aaaed5c78d7ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.visualization[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "visualization",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a02a779008fa3b99",
            "arn": "arn:aws:ec2:us-east-1::instance/i-02c53c72ff94638a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c53c72ff94638a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "social-media-pipeline-dev-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee2b9d08acae9e29",
            "private_dns": "ip-10-0-0-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.194",
            "public_dns": "ec2-3-220-174-112.compute-1.amazonaws.com",
            "public_ip": "3.220.174.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-067c0331e830eeabb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b4314b43b58ea16",
            "tags": {
              "Layer": "Visualization",
              "Name": "social-media-pipeline-dev-visualization"
            },
            "tags_all": {
              "Layer": "Visualization",
              "Name": "social-media-pipeline-dev-visualization"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01b2a7e4eeab65f3b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.ec2",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.visualization.aws_key_pair.ec2",
            "module.visualization.data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}